Bug 972623 - Fix string comparison in PeerConnectionImpl.cpp, r=ekr